Added validation to user input
